<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to the competition</string>
    <string name="submit_button">Submit</string>
    <string name="radiobutton1_1">1</string>
    <string name="radiobutton1_2">2</string>
    <string name="radiobutton1_3">3</string>
    <string name="radiobutton1_4">4</string>
    <string name="radiobutton1_5">5</string>
    <string name="radiobutton1_6">6</string>
    <string name="radiobutton1_7">7</string>
    <string name="radiobutton1_8">8</string>
    <string name="radiobutton1_9">9</string>
    <string name="radiobutton1_10">10</string>
    

    

</resources>
